--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+   "homepage": "https://Damidu00.github.io/Sample",
   "name": "nature_thank",
   "version": "0.1.0",
   "private": true,
@@ -6,7 +7,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+"deploy": "gh-pages -d out"
+
   },
   "dependencies": {
     "antd": "^5.21.1",
